# Azor

./: .gitignore  CMakeLists.txt
res/map/: scene1.tmx  test.tmx
res/tileset/: omaha.tsx
resources/: app.config.xml
resources/maps/: scene1.xml
resources/maps/tilesets/: omaha.xml
resources/shaders/: default.vert
shaders/: default.vert
src/: Application.cc  Application.h  azor-conf.h  config.h  logging.cc  logging.h  main.cc  main.cpp
src/camera/: camera.cc  camera.h
src/common/: AABB.h  FSM.cc  FSM.h  rec.h
src/common/utils/: string.cc  string.h
src/debug/: Console.cc  Console.h  dbg.cc  dbg.h
src/game/: Camera.cc  Camera.h  scene.cc  scene.h
src/game/object/: Entity.cc  Entity.h  Ground.cc  Ground.h  Hawkeye.cc  Hawkeye.h
src/glad/: glad.c
src/physics/: ContactListener.cc  ContactListener.h  DebugDraw.cc  DebugDraw.h  physics.cc  physics.h
src/render/: sprite-batch.cc  sprite-batch.h  sprite.cc  sprite.h
src/renderer/: Sprite.cc  Sprite.h  SpriteBatch.cc  SpriteBatch.h  renderer.cc  renderer.h
src/res/: res.cc  res.h  shader.cc  texture.cc  texture.h
src/resources/: Shader.cc  Shader.h  Texture.cc  resources.cc  resources.h
src/resources/map/: Layer.cc  Layer.h  Map.cc  Map.h  Tile.cc  Tile.h  TileSet.h
src/tmxparser/: map.h  tileset.h  tmxparser.cc  tmxparser.h
src/window/: window.cc  window.h
test/: logging.test.cc  map.test.cc  proj-view-model.test.cc  rect.test.cc  test.cc  tinyxml2.test.cc
